force-app/main/default/objects/cibus_service__c/fields/Accreditation__c.field-meta.xml
<CustomField>
    <fullName>Accreditation__c</fullName>
    <description>Details of any accreditations. Accreditation is the formal evaluation of an organization or program against best practice standards set by an accrediting organization.</description>
    <label>Accreditation</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>