force-app/main/default/objects/cibus_service__c/fields/alternate_name__c.field-meta.xml
<CustomField>
    <fullName>alternate_name__c</fullName>
    <description>Alternative or commonly used name for a service.</description>
    <label>Alternate Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>