force-app/main/default/objects/cibus_service__c/fields/Application_Process__c.field-meta.xml
<CustomField>
    <fullName>Application_Process__c</fullName>
    <label>Application Process</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>