force-app/main/default/objects/cibus_service__c/fields/Fees__c.field-meta.xml
<CustomField>
    <fullName>Fees__c</fullName>
    <description>Details of any charges for service users to access this service.</description>
    <label>Fees</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>