force-app/main/default/objects/cibus_service__c/fields/Interpretation_Services__c.field-meta.xml
<CustomField>
    <fullName>Interpretation_Services__c</fullName>
    <description>A description of any interpretation services available for accessing this service.</description>
    <label>Interpretation Services</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>