force-app/main/default/objects/cibus_service__c/fields/Licenses__c.field-meta.xml
<CustomField>
    <fullName>Licenses__c</fullName>
    <description>An organization may have a license issued by a government entity to operate legally. A list of any such licenses can be provided here.</description>
    <label>Licenses</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>