force-app/main/default/objects/cibus_service__c/fields/Wait_Time__c.field-meta.xml
<CustomField>
    <fullName>Wait_Time__c</fullName>
    <description>Time a client may expect to wait before receiving a service.</description>
    <label>Wait Time</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>